fix: contributors menu on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -116,7 +116,7 @@ body {
 }
 
 .contributors-section {
-    padding: 15px 20px;
+    padding: 5px 20px;
     border-top: 1px solid #333;
 }
 
@@ -153,7 +153,7 @@ body {
 }
 
 .contributors-content {
-    margin-top: 1rem;
+    margin-top: 0.3rem;
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
@@ -407,6 +407,12 @@ blockquote {
 
 #sidebar {
     margin-top: 78px; /* header height (60px) + status bar (18px) */
+}
+
+@media screen and (max-width: 768px) {
+    #sidebar {
+        margin-top: 0;
+    }
 }
 
 .select-wrapper {
